fix(MWPW-157947): Fixes spacing issue with 2 cards showing (#192)

--- a/less/components/consonant/cards/half-height.less
+++ b/less/components/consonant/cards/half-height.less
@@ -152,8 +152,4 @@
             .focus-pseudo-element;
         }
     }
-
-    &--4up {
-        grid-template-columns: repeat(auto-fit, minmax(@consonant-CardsGrid-smallerCardMinWidth, 1fr));
-    }
 }
